--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chrome": "^0.0.261",
+    "@webpack-cli/generators": "^3.0.7",
     "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "webpack": "^5.90.3",
+    "webpack": "^5.92.1"
+  },
+  "dependencies": {
     "webpack-cli": "^5.1.4"
   }
 }
